# OhCrapImBlind

./: .gitignore  CMakeLists.txt  LICENSE  README.md  car.cpp  car.hpp  ground.cpp  ground.hpp  level.cpp  level.hpp  main.cpp  util.cpp  util.hpp
assets/: bell.kra  bubbles.kra  construction.kra  goal.kra  nightclub-blue.kra  nightclub-pink.kra  nightclub-yellow.kra  nightclub.kra
audio/:  misc_sounds.aup  angry_drivers.aup  car.aup  car_real.aup  grass.aup  gravel.aup  horn.aup  walls.aup  water.aup  water_dripping.aup  wood.aup
audio/gravel_data/e00/d00/: e0000129.au  e000013d.au  e0000199.au  e000027f.au  e0000299.au  e00002c3.au  e000030f.au  e000040d.au  e00004f2.au  e000052f.au  e00006e7.au  e0000793.au  e000089f.au  e0000911.au  e000096e.au  e0000ada.au  e0000aee.au  e0000b13.au  e0000c8e.au  e0000cb0.au  e0000d36.au  e0000d91.au  e0000e0b.au  e0000f63.au  e0000f8a.au  e0000f8b.au  e0000fc5.au
audio/water_data/e00/d00/: e000005e.au  e000011e.au  e00003ea.au  e00005ab.au  e00006c1.au  e0000781.au  e0000877.au  e00008b3.au  e000098c.au  e0000b68.au  e0000d83.au  e0000fea.au
audio/water_dripping_data/e00/d00/: e00002cc.au  e000037f.au  e0000383.au  e00003ff.au  e0000542.au  e00005db.au  e00005f5.au  e0000733.au  e000078e.au  e00007dd.au  e00007e2.au  (+14 more)
data/: test_audio.json
maps/: map-1.kra  map-blindfrogger-pretty.kra  map-blindfrogger.kra  map-citychaos-pretty.kra  map-citychaos.kra  map-citywalk-pretty.kra  map-citywalk.kra  map-default.kra  map-swampwalk-pretty.kra  map-swampwalk.kra  map-winlevel.kra  map-woodswalk-pretty.kra  map-woodswalk.kra
(+8 files in other folders)
